# ckanext-cwbi-harvesters

./: .coveragerc  .gitignore  DEFAULT_ADMIN_CREDENTIALS.md  MANIFEST.in  README.md  app.ini  mkdocs.yml  pyproject.toml  setup.cfg  test.ini
ckanext/cwbi_harvesters/: cli.py  helpers.py  plugin.py  views.py
ckanext/cwbi_harvesters/assets/: script.js  webassets.yml
ckanext/cwbi_harvesters/harvester/: base.py  notifications.py
ckanext/cwbi_harvesters/harvesters/: __init__.py  arcgis.py  base.py  example.py  extensible.py  utils.py  waf_collection.py
ckanext/cwbi_harvesters/logic/: action.py  auth.py  schema.py  validators.py
ckanext/cwbi_harvesters/tests/: test_arcgis.py  test_helpers.py  test_logic.py  test_plugin.py  test_registry.py  test_views.py
ckanext/cwbi_harvesters/tests/data-samples/waf-gmi/: cb_2014_us_necta_500k.shp.iso.xml
ckanext/cwbi_harvesters/tests/logic/: test_action.py  test_auth.py  test_validators.py
cwbi_harvesters/: __init__.py  plugin.py
cwbi_harvesters/harvesters/: arcgis.py  extensible.py  registry.py
cwbi_harvesters/tests/: test_registry.py
docker/: Dockerfile.test  docker-compose.test.yml
docs/: contributing.md  getting-started.md  harvester.md  index.md
examples/ckan/: ckan_dataset_multilingual.json
examples/dcat/: dataset_health.ttl  dataset_multilingual.ttl
