[project]
name = "ckanext-cwbi-harvesters"
version = "0.0.1"
description = "Harvesters"
readme = "README.md"
authors = [
    {name = "CWBI", email = "brian.p.mulcahy@erdc.dren.mil"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "harvester", "cwbi", "usace", "schema", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/bmulcahy/ckanext-cwbi-harvesters"

[project.entry-points."ckan.plugins"]
cwbi_harvesters = "ckanext.cwbi_harvesters.plugin:CwbiHarvestersPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
