[project]
name = "ckanext-cwbi-harvesters"
version = "2.4.2"
dynamic = ["dependencies", "optional-dependencies"]
description = "Generic CKAN harvesters with ArcGIS support"
authors = [
    {name = "Adrià Mercader", email = "amercadero@gmail.com"}
]
maintainers = [
    {name = "CKAN Tech Team and contributors", email = "tech-team@ckan.org"},
    {name = "Seitenbau Govdata"},
    {name = "Stefan Oderbolz"}
]
license = {text = "AGPL"}
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = [
    "ckan",
    "ckanext",
    "harvest",
    "arcgis",
    "metadata",
    "open data"
]

[project.urls]
Documentation = "https://github.com/cwbi/ckanext-cwbi-harvesters"
Repository = "https://github.com/cwbi/ckanext-cwbi-harvesters"
Issues = "https://github.com/cwbi/ckanext-cwbi-harvesters/issues"

[build-system]
requires = ["setuptools>=62.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["dev-requirements.txt"] }}

[project.entry-points."ckan.plugins"]
cwbi_harvesters = "ckanext.cwbi_harvesters.plugin:CwbiHarvesters"

